--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -12,6 +12,13 @@ hr {
     border-width: 2px;
 } 
 
+.flc-setting {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .flc-prefSetPicker {
     float: left;
 }
