--- a/src/css/widgets.css
+++ b/src/css/widgets.css
@@ -1,7 +1,11 @@
 .fl-radioToggleLabel {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .fl-radioToggleLabel + .fl-radioToggleLabel {
-	margin-left: 10px;
+    margin-left: 10px;
+}
+
+.flc-multipickerItem {
+    display: block;
 }
