--- a/src/renderer/survey/css/webview.css
+++ b/src/renderer/survey/css/webview.css
@@ -1,3 +1,16 @@
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 5px;
+    background-color: #797979;
+    box-shadow: none;
+}
+
 .flc-closeBtn {
     padding: 5px 10px;
     border-radius: 3px;
