--- a/src/renderer/psp/css/restartMessage.css
+++ b/src/renderer/psp/css/restartMessage.css
@@ -2,7 +2,7 @@
     margin-bottom: 8px;
     padding: 8px;
     background-color: #dcf0fa;
-    border-left: 4px solid #034ea3;
+    border-left: 5px solid #034ea3;
 }
 
 .fl-restartMessage .fl-restartIcon {
@@ -43,4 +43,8 @@
     font-weight: bold;
     color: #558bc4;
     cursor: pointer;
+}
+
+.fl-restartMessage .fl-restartMessageBtn:hover {
+    color: #2887db;
 }
