NOJIRA: Adding a bulleted list of the applications which are to be restarted in the restart dialog

--- a/src/renderer/restartDialog/css/restartDialog.css
+++ b/src/renderer/restartDialog/css/restartDialog.css
@@ -82,6 +82,10 @@ body {
     padding: 0;
 }
 
+.fl-popup .fl-popup-contentText ul li {
+    margin: 0;
+}
+
 .flc-popup-bodyText {
     white-space: pre-wrap;
 }
