--- a/src/renderer/psp/css/main.css
+++ b/src/renderer/psp/css/main.css
@@ -7,6 +7,19 @@ body {
     user-select: none;
 }
 
+.fl-psp {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    font-size: 17px;
+    line-height: 1.4;
+}
+
+.fl-settingsEditor {
+    display: none;
+}
+
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 5px;
