--- a/src/renderer/psp/css/signin.css
+++ b/src/renderer/psp/css/signin.css
@@ -27,7 +27,6 @@
 
 .fl-signin-content .fl-signin-contentText .fl-title {
     margin-bottom: 10px;
-    color: #034EA2;
     font-size: 1.5em;
 }
 
@@ -52,7 +51,7 @@
     text-align: center;
 }
 
-.fl-errorPopup {
+.fl-error {
     margin-left: 20%;
     width: 80%;
 
@@ -61,20 +60,21 @@
     border: 1px solid #A62121;
     background-color: #F5E6E6;
 }
-.fl-errorPopup .fl-errorTitle {
+.fl-error .fl-errorTitle {
     font-size: 0.6em;
     font-weight: bold;
 }
-.fl-errorPopup .fl-errorDetails {
+.fl-error .fl-errorDetails {
     font-size: 0.5em;
 }
 
 .fl-links {
     margin-left: 20%;
     display: flex;
+    align-items: center;
 }
 
-.fl-links button {
+.fl-links a {
     margin: 0 5px 0 5px;
     padding: 0 0 0 0;
     font-size: 0.6em;
