--- a/src/renderer/psp/css/signin.css
+++ b/src/renderer/psp/css/signin.css
@@ -1,12 +1,11 @@
-/* Container styles */
-
+/* Default theme styles */
 .fl-signin {
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
-.fl-signin-content {
+.fl-signin .fl-signin-content {
     padding: 12px;
     background-color: #ffffff;
     
@@ -14,91 +13,88 @@
     flex: 1;
 }
 
-.fl-signin-content .fl-signin-contentIcon {
+.fl-signin .fl-signin-content ul li {
+    margin: 0;
+}
+
+.fl-signin .fl-signin-content .fl-signin-contentIcon {
     float: left;
     width: 48px;
     height: 48px;
     margin-right: 10px;
 }
 
-.fl-signin-content .fl-signin-contentText {
+.fl-signin .fl-signin-content .fl-signin-contentText {
     overflow: hidden;
 }
 
-.fl-signin-content .fl-signin-contentText .fl-title {
+.fl-signin .fl-signin-content .fl-signin-contentText .fl-title {
     margin-bottom: 10px;
     font-size: 1.5em;
 }
 
-.fl-signin-content .fl-signin-contentText .fl-title + .fl-subtitle {
+.fl-signin .fl-signin-content .fl-signin-contentText .fl-title + .fl-subtitle {
     margin: -12px 0 10px 0;
     font-size: 0.9em;
 }
 
-.fl-signin-content .fl-signin-contentText .fl-details {
+.fl-signin .fl-signin-content .fl-signin-contentText .fl-details {
     padding-bottom: 10px;
     line-height: 1.33;
     white-space: pre-wrap;
 }
 
-
-.fl-subhead {
+.fl-signin .fl-signin-contentText .fl-subhead {
     margin: 10px 0 20px 0;
 }
 
-.fl-subhead .fl-title,
-.fl-subhead .fl-subtitle {
+.fl-signin .fl-signin-contentText .fl-subhead .fl-title,
+.fl-signin .fl-signin-contentText .fl-subhead .fl-subtitle {
     text-align: center;
 }
 
-.fl-error {
+.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error {
     margin-left: 20%;
     width: 80%;
 
     padding: 2px;
 
-    border: 1px solid #A62121;
-    background-color: #F5E6E6;
+    border: 1px solid #a62121;
+    background-color: #f5e6e6;
 }
-.fl-error .fl-errorTitle {
+.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error .fl-errorTitle {
     font-size: 0.6em;
     font-weight: bold;
 }
-.fl-error .fl-errorDetails {
+.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error .fl-errorDetails {
     font-size: 0.5em;
 }
 
-.fl-links {
+.fl-signin .fl-signin-contentText .fl-links {
     margin-left: 20%;
     display: flex;
     align-items: center;
 }
 
-.fl-links a {
+.fl-signin .fl-signin-contentText .fl-links a {
     margin: 0 5px 0 5px;
     padding: 0 0 0 0;
     font-size: 0.6em;
     min-width: unset;
 }
 
-/* Override some of the winstrap.css styles */
-
-.fl-signin-content ul li {
-    margin: 0;
-}
-
-.form-group {
+.fl-signin .fl-signin-contentText .fl-sigin-form {
     display: block;
 
     margin: 0 0 0 0;
 }
 
-.form-group label {
+.fl-signin .fl-signin-contentText .fl-sigin-form label {
     float: left;
     width: 20%;
 }
 
-.form-group input {
+.fl-signin .fl-signin-contentText .fl-sigin-form input {
     float: left;
     width: 80%;
     max-width: none;
@@ -113,11 +109,11 @@
     font-size: 0.6em;
 }
 
-.form-group input:focus {
-    box-shadow: 0 0 5px #83CBEF;
+.fl-signin .fl-signin-contentText .fl-sigin-form input:focus {
+    box-shadow: 0 0 5px #83cbef;
 }
 
-.form-group .fl-signinBtn {
+.fl-signin .fl-signin-contentText .fl-sigin-form .fl-signinBtn {
     margin: 0 0 3px 20%;
     width: 80%;
     min-height: 26px;
