--- a/src/renderer/psp/css/signin.css
+++ b/src/renderer/psp/css/signin.css
@@ -1,11 +1,11 @@
 /* Default theme styles */
-.fl-signin {
+.fl-signIn {
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
-.fl-signin .fl-signin-content {
+.fl-signIn .fl-signIn-content {
     padding: 12px;
     background-color: #ffffff;
     
@@ -13,47 +13,47 @@
     flex: 1;
 }
 
-.fl-signin .fl-signin-content ul li {
+.fl-signIn .fl-signIn-content ul li {
     margin: 0;
 }
 
-.fl-signin .fl-signin-content .fl-signin-contentIcon {
+.fl-signIn .fl-signIn-content .fl-signIn-contentIcon {
     float: left;
     width: 48px;
     height: 48px;
     margin-right: 10px;
 }
 
-.fl-signin .fl-signin-content .fl-signin-contentText {
+.fl-signIn .fl-signIn-content .fl-signIn-contentText {
     overflow: hidden;
 }
 
-.fl-signin .fl-signin-content .fl-signin-contentText .fl-title {
+.fl-signIn .fl-signIn-content .fl-signIn-contentText .fl-title {
     margin-bottom: 10px;
     font-size: 1.5em;
 }
 
-.fl-signin .fl-signin-content .fl-signin-contentText .fl-title + .fl-subtitle {
+.fl-signIn .fl-signIn-content .fl-signIn-contentText .fl-title + .fl-subtitle {
     margin: -12px 0 10px 0;
     font-size: 0.9em;
 }
 
-.fl-signin .fl-signin-content .fl-signin-contentText .fl-details {
+.fl-signIn .fl-signIn-content .fl-signIn-contentText .fl-details {
     padding-bottom: 10px;
     line-height: 1.33;
     white-space: pre-wrap;
 }
 
-.fl-signin .fl-signin-contentText .fl-subhead {
+.fl-signIn .fl-signIn-contentText .fl-subhead {
     margin: 10px 0 20px 0;
 }
 
-.fl-signin .fl-signin-contentText .fl-subhead .fl-title,
-.fl-signin .fl-signin-contentText .fl-subhead .fl-subtitle {
+.fl-signIn .fl-signIn-contentText .fl-subhead .fl-title,
+.fl-signIn .fl-signIn-contentText .fl-subhead .fl-subtitle {
     text-align: center;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form .fl-error {
     margin-left: 20%;
     width: 80%;
 
@@ -62,39 +62,39 @@
     border: 1px solid #a62121;
     background-color: #f5e6e6;
 }
-.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error .fl-errorTitle {
+
+.fl-signIn .fl-signIn-contentText .fl-sigin-form .fl-error .fl-errorTitle {
     font-size: 0.6em;
     font-weight: bold;
 }
-.fl-signin .fl-signin-contentText .fl-sigin-form .fl-error .fl-errorDetails {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form .fl-error .fl-errorDetails {
     font-size: 0.5em;
 }
 
-.fl-signin .fl-signin-contentText .fl-links {
+.fl-signIn .fl-signIn-contentText .fl-links {
     margin-left: 20%;
     display: flex;
     align-items: center;
 }
 
-.fl-signin .fl-signin-contentText .fl-links a {
+.fl-signIn .fl-signIn-contentText .fl-links a {
     margin: 0 5px 0 5px;
     padding: 0 0 0 0;
     font-size: 0.6em;
     min-width: unset;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form {
     display: block;
-
-    margin: 0 0 0 0;
+    margin: 0;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form label {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form label {
     float: left;
     width: 20%;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form input {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form input {
     float: left;
     width: 80%;
     max-width: none;
@@ -109,11 +109,11 @@
     font-size: 0.6em;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form input:focus {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form input:focus {
     box-shadow: 0 0 5px #83cbef;
 }
 
-.fl-signin .fl-signin-contentText .fl-sigin-form .fl-signinBtn {
+.fl-signIn .fl-signIn-contentText .fl-sigin-form .fl-signInBtn {
     margin: 0 0 3px 20%;
     width: 80%;
     min-height: 26px;
@@ -121,15 +121,19 @@
 }
 
 /* Styles for alt (dark) theme */
-.theme-alt .fl-signin .fl-signin-content {
+.theme-alt .fl-signIn .fl-signIn-content {
     background-color: var(--alt-theme-background-color);
 }
 
-.theme-alt .fl-signin .fl-signin-contentText .fl-sigin-form input {
+.theme-alt .fl-signIn .fl-signIn-contentText .fl-sigin-form input {
     background-color: var(--alt-theme-text-color);
 }
 
-.theme-alt .fl-signin .fl-signin-contentText .fl-sigin-form input:focus {
+.theme-alt .fl-signIn .fl-signIn-contentText .fl-sigin-form input:focus {
     border-color: var(--main-color);
     box-shadow: 0 0 5px var(--main-color);
+}
+
+.theme-alt .fl-signIn .fl-signIn-contentText .fl-sigin-form .fl-error {
+    background-color: #a62121;
 }
