--- a/src/renderer/common/css/dialog.css
+++ b/src/renderer/common/css/dialog.css
@@ -6,6 +6,8 @@ body {
 }
 
 .fl-dialog {
+    height: 100%;
+    width: 400px;
     display: flex;
     flex-direction: column;
 }
@@ -143,5 +145,9 @@ body {
 
 
 .flc-clickthrough {
-    flex: 1 1 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
