--- a/src/renderer/qssWidget/css/qssWidget.css
+++ b/src/renderer/qssWidget/css/qssWidget.css
@@ -38,13 +38,9 @@
         background-color: #FFEA00;
         color: black;
     }
-    0%, 100%   {
-        background-color: #0f4797;
-        color: white;
-    }
 }
 
-.fl-qssStepperWidget-btn.fl-qssWidgetBtn-trigger {
+.fl-qssStepperWidgetBtn-trigger {
     animation: activate 0.5s;
 }
 
